Tue May 20 23:26:19 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Report the size limit in the message when we skip a file
	  which exceeds it.

Mon Apr 14 10:42:06 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Filtering via text/html now handles HTML documents which
	  specify a charset.  "application/vnd.ms-outlook" is now handled by
	  filtering via text/html rather than as a hard-coded special case.

Thu Apr 10 03:47:18 GMT 2014  Olly Betts <olly@survex.com>

	* docs/overview.rst,omindex.cc: Add support for indexing Microsoft
	  Publisher files using pub2xhtml.

Thu Apr 10 03:29:50 GMT 2014  Olly Betts <olly@survex.com>

	* diritor.cc: Work around libmagic returning a MIME content-type of
	  "Composite Document File V2 Document, No summary info".

Tue Mar 25 08:56:13 GMT 2014  Olly Betts <olly@survex.com>

	* expand.cc: Fix mis-indentation of two lines.

Tue Mar 25 08:54:28 GMT 2014  Olly Betts <olly@survex.com>

	* expand.cc: Fix warning when built with GCC 4.7.2 using -Os.

Thu Mar 13 01:41:49 GMT 2014  Olly Betts <olly@survex.com>

	* omindex.cc: Restrict the length of what we consider to be an
	  extension, currently to 7 characters or whatever the longest
	  extension in the mime_map is if it is longer.

Mon Mar 10 06:23:22 GMT 2014  Olly Betts <olly@survex.com>

	* expand.cc,expand.h,omega.cc,query.cc: Fix $set{expand,trad <K>} to
	  work when built against an older xapian-core.

Mon Mar 10 04:22:05 GMT 2014  Olly Betts <olly@survex.com>

	* expand.cc: Only use new query expansion API if built against
	  xapian-core >= 1.3.2.

Thu Mar 06 10:25:03 GMT 2014  Olly Betts <olly@survex.com>

	* expand.cc: Throw an error if $opt{expansion} is invalid.

Thu Mar 06 09:58:24 GMT 2014  Aarsh Shah <aarshkshah1992@gmail.com>

	* Makefile.am,docs/omegascript.rst,expand.cc,expand.h,omega.cc,
	  query.cc: Add support for setting the query expansion scheme to use.

Tue Feb 18 05:04:48 GMT 2014  Olly Betts <olly@survex.com>
